--- a/snippets/collection-filters.liquid
+++ b/snippets/collection-filters.liquid
@@ -1,75 +1,70 @@
-<div class="relative w-full mx-auto overflow-hidden bg-[#eee]">
-  <div x-data="{open: true}" class="container relative cursor-pointer group">
-    <div @click="open = !open" class="absolute left-0 w-full flex justify-between items-center">
-      <button class="p-3">
+<div class="relative w-full mx-auto overflow-hidden text-xl">
+
+  <div x-data="filters" class="container relative cursor-pointer group">
+    <div @click="toggleIsOpen" class="z-10 relative left-0 w-full flex justify-between py-3 items-center">
+      <button class="md:px-10">
         Filtry
       </button>
-      <svg class="w-4 h-4 duration-200 ease-out" :class="{ 'rotate-180': open }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
+      <svg class="w-4 h-4 duration-200 ease-out md:mr-10" :class="{ 'rotate-180': isOpen }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
     </div>
 
-    <div x-show="open" x-collapse.min.48px x-cloak>
-      <div x-data="filters" x-initialize="initialize" class="grid grid-cols-4 w-4/6 mx-auto">
-        <div class="col-start-1 p-3">Sortowanie</div>
-        <div class="col-start-2 p-3">Kolorystycznie</div>
-        <div class="col-start-3 p-3">Materiał</div>
-        <div class="col-start-4 p-3">Dostępność</div>
-        <div class="col-start-1 p-3">
-          <template x-for="option in sortOptions" :key="option.value">
-            <div>
-              <input
-                type="checkbox"
-                :value="option.value"
-                x-model="selectedSortOption">
-              <span x-text="option.label"></span>
-            </div>
+    <div class="relative flex flex-col gap-4 lg:-translate-y-[2.4rem] md:!overflow-visible" x-show="isOpen" x-collapse.min.0px x-cloak>
+      <div class="flex flex-col sm:flex-row sm:w-5/6 sm:max-w-[400px] lg:max-w-none justify-evenly gap-10 mx-auto flex-wrap whitespace-nowrap">
+        <div class="flex flex-col flex-1 min-w-fit max-w-[200px] overflow-hidden gap-3 md:items-start">
+          <p class="text-center self-center">Sortowanie</p>
+          <template x-for="(item, index) in sortOptions">
+            {% render 'checkbox',
+            id: ':id="item.value + index"',
+            for: ':for="item.value + index"',
+            value: ':value="item.value"',
+            checked: ':checked="selectedSortOption === item.value"',
+            click: '@click="updateSortOption($event.target.value)"',
+            text: 'x-text="item.label"' %}
           </template>
         </div>
-        <div class="col-start-2">
-          <template x-for="option in colorOptions" :key="option.value">
-            <div>
-              <input
-                type="checkbox"
-                :value="option.value"
-                x-model="selectedColorOptions">
-              <span x-text="option.label"></span>
-            </div>
+        <div class="flex flex-col flex-1 min-w-fit max-w-[200px]  gap-3">
+          <p class="text-center">Kolorystycznie</p>
+          <template x-for="(item, index) in colorOptions">
+            {% render 'checkbox',
+            id: ':id="item.value + index"',
+            for: ':for="item.value + index"',
+            value: ':value="item.value"',
+            checked: ':checked="selectedColorOption === item.value"',
+            click: '@click="updateColorOption($event.target.value)"',
+            text: 'x-text="item.label"' %}
           </template>
         </div>
-        <div class="col-start-3 flex flex-col gap-2">
-          <template x-for="option in colorOptions" :key="option.value">
-            <div>
-              <input
-                type="checkbox"
-                :value="option.value"
-                x-model="selectedMaterialOptions">
-              <span x-text="option.label"></span>
-            </div>
+        <div class="flex flex-col flex-1 min-w-fit max-w-[200px]  gap-3">
+          <p class="text-center">Materiał</p>
+          <template x-for="(item, index) in materialOptions">
+            {% render 'checkbox',
+            id: ':id="item.value + index"',
+            for: ':for="item.value + index"',
+            value: ':value="item.value"',
+            checked: ':checked="selectedMaterialOption === item.value"',
+            click: '@click="updateMaterialOption($event.target.value)"',
+            text: 'x-text="item.label"' %}
           </template>
-          </div>
-        <div class="col-start-4">
-          <div>
-              <input
-                type="checkbox"
-                x-model="isLastOnes">
-              <span>ostatnie sztuki</span>
-            </div>
-            <div class="flex items-start mb-6">
-              <div class="flex items-center h-5">
-                  <input name="custom-checkbox" id="custom-checkbox" type="checkbox" class="hidden peer" required>
-                  <label for="custom-checkbox" class="peer-checked:[&_svg]:scale-100 text-sm font-medium text-neutral-600 peer-checked:text-primary [&_svg]:scale-0 peer-checked:[&_.custom-checkbox]:border-primary peer-checked:[&_.custom-checkbox]:bg-primary select-none flex items-center space-x-2">
-                      <span class="flex items-center justify-center w-5 h-5 border-2 rounded custom-checkbox text-neutral-900">
-                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor" class="w-3 h-3 text-white duration-300 ease-out">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" />
-                        </svg>
-                      </span>
-                      <span>Ostatnie sztuki</span>
-                  </label>
-              </div>
-            </div>
-        
         </div>
-        
-        <button @click="submitFilters()">Filtruj</button>
+        <div class="flex flex-col flex-1 min-w-fit max-w-[200px]  gap-3">
+          <p class="text-center">Dostępność</p>
+          {% render 'checkbox', 
+          model: 'x-model="isAvailable"',
+          id: 'id="is-available-checkbox"',
+          for: 'for="is-available-checkbox"',
+          content: 'Dostępne'
+         %}
+          {% render 'checkbox',
+            model: 'x-model="isLastOne"',
+            id: 'id="is-last-one-checkbox"',
+            for: 'for="is-last-one-checkbox"',
+            content: 'Ostatnie sztuki'
+          %}
+        </div>
+      </div>
+      <div class="flex gap-4 w-1/5 self-center">
+        <button class="button flex-1" @click="resetFilters()">Wyczyść</button>
+        <button class="button flex-1" @click="submitFilters()">Filtruj</button>
       </div>
     </div>
   </div>
