Fixed issue in filters

--- a/snippets/collection-filters.liquid
+++ b/snippets/collection-filters.liquid
@@ -1,7 +1,7 @@
 <div class="relative w-full mx-auto overflow-hidden text-xl">
 
   <div x-data="filters" class="container relative cursor-pointer group">
-    <div @click="toggleIsOpen" class="z-10 relative left-0 w-full flex justify-between py-3 items-center">
+    <div @click="toggleIsOpen" class="relative left-0 w-full flex justify-between py-3 items-center">
       <button class="md:px-10">
         Filtry
       </button>
