--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,4 +1,7 @@
-<header x-data="mobileMenu" x-cloak>
+<header
+  x-data="mobileMenu"
+  class="z-50"
+  x-cloak>
   <!-- LOGO WITH ACTIONS -->
   <div class="container mx-auto relative">
     <!-- MENU BUTTON -->
@@ -31,7 +34,7 @@
   <div class="w-full bg-black h-[2px]"></div>
 
   <!-- NAVIGATION MENU -->
-  <div class="container mx-auto relative text-xl hidden lg:block z-10">
+  <div class="container mx-auto relative text-xl hidden lg:block z-40">
     <nav class="flex w-max mx-auto">
       {% for link in linklists[section.settings.menu].links %}
         {% if link.links != blank %}
