--- a/snippets/collection-filters.liquid
+++ b/snippets/collection-filters.liquid
@@ -1,15 +1,13 @@
-<div class="relative w-full mx-auto overflow-hidden text-xl">
-
-  <div x-data="filters" class="container relative cursor-pointer group">
-    <div @click="toggleIsOpen" class="relative left-0 w-full flex justify-between py-3 items-center">
-      <button class="md:px-10">
-        Filtry
-      </button>
-      <svg class="w-4 h-4 duration-200 ease-out md:mr-10" :class="{ 'rotate-180': isOpen }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
-    </div>
-
-    <div class="relative flex flex-col gap-4 lg:-translate-y-[2.4rem] md:!overflow-visible" x-show="isOpen" x-collapse.min.0px x-cloak>
-      <div class="flex flex-col sm:flex-row sm:w-5/6 sm:max-w-[400px] lg:max-w-none justify-evenly gap-10 mx-auto flex-wrap whitespace-nowrap">
+<div x-data="filters" class="relative w-full mx-auto tracking-widest overflow-hidden text-xl bg-[#f6f6f6] shadow-inner mb-10">
+  <div @click="toggleIsOpen" class="container md:container-none cursor-pointer relative z-10 left-0 w-full flex justify-between py-3 items-center">
+    <button class="md:px-6 font-normal">
+      FILTRY:
+    </button>
+    <svg class="w-6 h-6 duration-200 ease-out md:mr-6" :class="{ 'rotate-180': isOpen }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
+  </div>
+  <div class="container relative group">
+    <div class="relative flex flex-col gap-4 lg:-translate-y-[2.5rem] md:!overflow-visible" x-show="isOpen" x-collapse.min.0px x-cloak>
+      <div class="flex flex-col sm:flex-row sm:w-5/6 md:max-w-[450px] lg:max-w-none justify-evenly gap-10 mx-auto flex-wrap whitespace-nowrap">
         <div class="flex flex-col flex-1 min-w-fit max-w-[200px] overflow-hidden gap-3 md:items-start">
           <p class="text-center self-center">Sortowanie</p>
           <template x-for="(item, index) in sortOptions">
@@ -62,7 +60,7 @@
           %}
         </div>
       </div>
-      <div class="flex gap-4 w-1/5 self-center">
+      <div class="flex flex-col w-full gap-4 sm:flex-row sm:w-2/6 self-center mb-10 mt-4 lg:mb-0">
         <button class="button flex-1" @click="resetFilters()">Wyczyść</button>
         <button class="button flex-1" @click="submitFilters()">Filtruj</button>
       </div>
