--- a/assets/app.css
+++ b/assets/app.css
@@ -521,6 +521,7 @@ video {
   }
 body {
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
 input[type="number"]::-webkit-outer-spin-button,
   input[type="number"]::-webkit-inner-spin-button,
@@ -838,9 +839,6 @@ input[type="number"]::-webkit-outer-spin-button,
 .z-40 {
   z-index: 40;
 }
-.-z-10 {
-  z-index: -10;
-}
 .z-50 {
   z-index: 50;
 }
@@ -914,15 +912,14 @@ input[type="number"]::-webkit-outer-spin-button,
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-.my-0 {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
 .\!mt-5 {
   margin-top: 1.25rem !important;
 }
 .-ml-1 {
   margin-left: -0.25rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
@@ -977,15 +974,6 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .mt-8 {
   margin-top: 2rem;
-}
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-.mr-10 {
-  margin-right: 2.5rem;
-}
-.mr-6 {
-  margin-right: 1.5rem;
 }
 .block {
   display: block;
@@ -1083,9 +1071,6 @@ input[type="number"]::-webkit-outer-spin-button,
 .w-1\/2 {
   width: 50%;
 }
-.w-1\/5 {
-  width: 20%;
-}
 .w-10 {
   width: 2.5rem;
 }
@@ -1126,12 +1111,6 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .w-screen {
   width: 100vw;
-}
-.w-2\/5 {
-  width: 40%;
-}
-.w-2\/6 {
-  width: 33.333333%;
 }
 .min-w-\[250px\] {
   min-width: 250px;
@@ -1305,9 +1284,6 @@ input[type="number"]::-webkit-outer-spin-button,
 .justify-evenly {
   justify-content: space-evenly;
 }
-.justify-stretch {
-  justify-content: stretch;
-}
 .gap-1 {
   gap: 0.25rem;
 }
@@ -1442,6 +1418,10 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
+.border-primary {
+  --tw-border-opacity: 1;
+  border-color: rgb(139 172 165 / var(--tw-border-opacity));
+}
 .border-red-600 {
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
@@ -1450,9 +1430,9 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
-.border-primary {
-  --tw-border-opacity: 1;
-  border-color: rgb(139 172 165 / var(--tw-border-opacity));
+.bg-\[\#f8f9f4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 244 / var(--tw-bg-opacity));
 }
 .bg-accent {
   --tw-bg-opacity: 1;
@@ -1522,21 +1502,6 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
-}
-.bg-\[\#f2f2f2\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
-}
-.bg-\[\#f6f6f6\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(246 246 246 / var(--tw-bg-opacity));
-}
-.bg-\[f8f9f4\] {
-  background-color: f8f9f4;
-}
-.bg-\[\#f8f9f4\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 249 244 / var(--tw-bg-opacity));
 }
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
@@ -1636,14 +1601,6 @@ input[type="number"]::-webkit-outer-spin-button,
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
-}
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
 }
 .pb-12 {
   padding-bottom: 3rem;
@@ -1885,6 +1842,11 @@ input[type="number"]::-webkit-outer-spin-button,
 .opacity-75 {
   opacity: 0.75;
 }
+.shadow-inner {
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-none {
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
@@ -1894,19 +1856,6 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-inner {
-  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.brightness-90 {
-  --tw-brightness: brightness(.9);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-.brightness-95 {
-  --tw-brightness: brightness(.95);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
@@ -2031,74 +1980,6 @@ div[data-block-handle="ig_feed"] {
     max-width: 1536px !important;
   }
 }
-@media (min-width: 640px) {
-  .sm\:container {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 20px;
-    padding-left: 20px;
-  }
-  @media (min-width: 640px) {
-    .sm\:container {
-      max-width: 640px;
-    }
-  }
-  @media (min-width: 768px) {
-    .sm\:container {
-      max-width: 768px;
-    }
-  }
-  @media (min-width: 1024px) {
-    .sm\:container {
-      max-width: 1024px;
-    }
-  }
-  @media (min-width: 1280px) {
-    .sm\:container {
-      max-width: 1280px;
-    }
-  }
-  @media (min-width: 1536px) {
-    .sm\:container {
-      max-width: 1536px;
-    }
-  }
-}
-@media (min-width: 768px) {
-  .md\:container {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 20px;
-    padding-left: 20px;
-  }
-  @media (min-width: 640px) {
-    .md\:container {
-      max-width: 640px;
-    }
-  }
-  @media (min-width: 768px) {
-    .md\:container {
-      max-width: 768px;
-    }
-  }
-  @media (min-width: 1024px) {
-    .md\:container {
-      max-width: 1024px;
-    }
-  }
-  @media (min-width: 1280px) {
-    .md\:container {
-      max-width: 1280px;
-    }
-  }
-  @media (min-width: 1536px) {
-    .md\:container {
-      max-width: 1536px;
-    }
-  }
-}
 .placeholder\:text-white\/90::-moz-placeholder {
   color: rgb(255 255 255 / 0.9);
 }
@@ -2154,10 +2035,6 @@ div[data-block-handle="ig_feed"] {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
-.hover\:bg-black:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
 .hover\:fill-accent:hover {
   fill: #8baca5;
 }
@@ -2186,14 +2063,6 @@ div[data-block-handle="ig_feed"] {
 .hover\:brightness-110:hover {
   --tw-brightness: brightness(1.1);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-.checked\:hover\:bg-black:hover:checked {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.hover\:checked\:bg-black:checked:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .active\:scale-100:active {
   --tw-scale-x: 1;
@@ -2241,28 +2110,18 @@ div[data-block-handle="ig_feed"] {
 .peer:checked ~ .peer-checked\:font-medium {
   font-weight: 500;
 }
-.peer:checked ~ .peer-checked\:text-primary {
-  --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
-}
 @media (min-width: 640px) {
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
-  .sm\:w-5\/6 {
-    width: 83.333333%;
-  }
   .sm\:w-2\/6 {
     width: 33.333333%;
   }
+  .sm\:w-5\/6 {
+    width: 83.333333%;
+  }
   .sm\:max-w-\[1000px\] {
     max-width: 1000px;
-  }
-  .sm\:max-w-\[400px\] {
-    max-width: 400px;
-  }
-  .sm\:max-w-\[350px\] {
-    max-width: 350px;
   }
   .sm\:flex-1 {
     flex: 1 1 0%;
@@ -2327,14 +2186,11 @@ div[data-block-handle="ig_feed"] {
     margin-top: 2rem;
     margin-bottom: 2rem;
   }
-  .md\:mr-10 {
-    margin-right: 2.5rem;
+  .md\:mr-6 {
+    margin-right: 1.5rem;
   }
   .md\:mt-5 {
     margin-top: 1.25rem;
-  }
-  .md\:mr-6 {
-    margin-right: 1.5rem;
   }
   .md\:block {
     display: block;
@@ -2391,9 +2247,6 @@ div[data-block-handle="ig_feed"] {
   .md\:w-full {
     width: 100%;
   }
-  .md\:max-w-\[400px\] {
-    max-width: 400px;
-  }
   .md\:max-w-\[450px\] {
     max-width: 450px;
   }
@@ -2437,10 +2290,6 @@ div[data-block-handle="ig_feed"] {
   .md\:p-12 {
     padding: 3rem;
   }
-  .md\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2469,13 +2318,6 @@ div[data-block-handle="ig_feed"] {
   .lg\:max-w-none {
     max-width: none;
   }
-  .lg\:max-w-\[400px\] {
-    max-width: 400px;
-  }
-  .lg\:-translate-y-\[2\.4rem\] {
-    --tw-translate-y: -2.4rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
   .lg\:-translate-y-\[2\.5rem\] {
     --tw-translate-y: -2.5rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2493,9 +2335,6 @@ div[data-block-handle="ig_feed"] {
 @media (min-width: 1280px) {
   .xl\:w-4\/6 {
     width: 66.666667%;
-  }
-  .xl\:max-w-none {
-    max-width: none;
   }
 }
 .peer:checked ~ .peer-checked\:\[\&_\.custom-checkbox\]\:border-primary .custom-checkbox {
