--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -1,5 +1,5 @@
 <div
-  class="slider lg:w-4/5 xl:w-4/6 mx-auto relative my-10"
+  class="slider overflow-hidden lg:w-4/5 xl:w-4/6 mx-auto relative my-10"
   x-data="slider"
   x-init="initialize">
   <div x-ref="sliderContainer">
