--- a/snippets/collection-filters.liquid
+++ b/snippets/collection-filters.liquid
@@ -2,7 +2,7 @@
 <div x-data="filters" class="relative w-full mx-auto tracking-widest overflow-hidden text-xl bg-[#f8f9f4] shadow-inner mb-10">
   <div @click="toggleIsOpen" class="container md:container-none cursor-pointer relative z-10 left-0 w-full flex justify-between py-3 items-center">
     <button class="md:px-6 font-normal">
-      FILTRY:
+      Filtry:
     </button>
     <svg class="w-6 h-6 duration-200 ease-out md:mr-6" :class="{ 'rotate-180': isOpen }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
   </div>
