--- a/snippets/product-media-slider.liquid
+++ b/snippets/product-media-slider.liquid
@@ -1,4 +1,4 @@
-<div class="slider-container overflow-hidden" x-data="Slider">
+<div class="slider-container" x-data="Slider">
   <div class="slider-container__for-arrows relative">
     <div
       class="slider overflow-x-auto flex snap-mandatory snap-x scroll-smooth"
