--- a/assets/app.css
+++ b/assets/app.css
@@ -521,7 +521,6 @@ video {
   }
 body {
     scroll-behavior: smooth;
-    overflow-x: hidden;
   }
 input[type="number"]::-webkit-outer-spin-button,
   input[type="number"]::-webkit-inner-spin-button,
@@ -690,7 +689,7 @@ input[type="number"]::-webkit-outer-spin-button,
     cursor: pointer;
     border-radius: 0.5rem;
     --tw-bg-opacity: 1;
-    background-color: rgb(139 172 165 / var(--tw-bg-opacity));
+    background-color: rgb(153 138 95 / var(--tw-bg-opacity));
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 0.5rem;
@@ -827,6 +826,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .top-\[58px\] {
   top: 58px;
 }
+.top-full {
+  top: 100%;
+}
 .z-10 {
   z-index: 10;
 }
@@ -853,6 +855,9 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .col-span-3 {
   grid-column: span 3 / span 3;
+}
+.col-span-12 {
+  grid-column: span 12 / span 12;
 }
 .m-10 {
   margin: 2.5rem;
@@ -911,6 +916,10 @@ input[type="number"]::-webkit-outer-spin-button,
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 .\!mt-5 {
   margin-top: 1.25rem !important;
@@ -975,6 +984,12 @@ input[type="number"]::-webkit-outer-spin-button,
 .mt-8 {
   margin-top: 2rem;
 }
+.-mt-36 {
+  margin-top: -9rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
 .block {
   display: block;
 }
@@ -1004,6 +1019,9 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .aspect-auto {
   aspect-ratio: auto;
+}
+.aspect-square {
+  aspect-ratio: 1 / 1;
 }
 .aspect-video {
   aspect-ratio: 16 / 9;
@@ -1059,8 +1077,14 @@ input[type="number"]::-webkit-outer-spin-button,
 .h-screen {
   height: 100vh;
 }
+.h-28 {
+  height: 7rem;
+}
 .max-h-\[70vh\] {
   max-height: 70vh;
+}
+.max-h-full {
+  max-height: 100%;
 }
 .min-h-\[200px\] {
   min-height: 200px;
@@ -1112,6 +1136,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .w-screen {
   width: 100vw;
 }
+.w-28 {
+  width: 7rem;
+}
 .min-w-\[250px\] {
   min-width: 250px;
 }
@@ -1155,11 +1182,20 @@ input[type="number"]::-webkit-outer-spin-button,
 .max-w-sm {
   max-width: 24rem;
 }
+.max-w-full {
+  max-width: 100%;
+}
 .flex-1 {
   flex: 1 1 0%;
 }
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
 .flex-grow {
   flex-grow: 1;
+}
+.flex-grow-0 {
+  flex-grow: 0;
 }
 .table-auto {
   table-layout: auto;
@@ -1198,6 +1234,9 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.transform-gpu {
+  transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), 0) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 @keyframes spin {
   to {
@@ -1245,6 +1284,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .grid-cols-\[1fr_2fr\] {
   grid-template-columns: 1fr 2fr;
 }
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
 .flex-row {
   flex-direction: row;
 }
@@ -1253,6 +1295,9 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .flex-wrap {
   flex-wrap: wrap;
+}
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 .place-content-center {
   place-content: center;
@@ -1366,6 +1411,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .overflow-y-auto {
   overflow-y: auto;
 }
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -1404,11 +1452,17 @@ input[type="number"]::-webkit-outer-spin-button,
 .border-2 {
   border-width: 2px;
 }
+.border-4 {
+  border-width: 4px;
+}
 .border-b {
   border-bottom-width: 1px;
 }
 .border-r-0 {
   border-right-width: 0px;
+}
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 .border-\[\#ddd\] {
   --tw-border-opacity: 1;
@@ -1420,7 +1474,7 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .border-primary {
   --tw-border-opacity: 1;
-  border-color: rgb(139 172 165 / var(--tw-border-opacity));
+  border-color: rgb(153 138 95 / var(--tw-border-opacity));
 }
 .border-red-600 {
   --tw-border-opacity: 1;
@@ -1429,6 +1483,10 @@ input[type="number"]::-webkit-outer-spin-button,
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.border-indigo-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(79 70 229 / var(--tw-border-opacity));
 }
 .bg-\[\#f8f9f4\] {
   --tw-bg-opacity: 1;
@@ -1502,6 +1560,14 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}
+.bg-indigo-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+}
+.bg-indigo-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
@@ -1631,6 +1697,9 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
 }
 .text-left {
   text-align: left;
@@ -1771,7 +1840,7 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .text-primary {
   --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
+  color: rgb(153 138 95 / var(--tw-text-opacity));
 }
 .text-red-500 {
   --tw-text-opacity: 1;
@@ -1821,6 +1890,14 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-indigo-400 {
+  --tw-text-opacity: 1;
+  color: rgb(129 140 248 / var(--tw-text-opacity));
+}
+.text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
@@ -1857,6 +1934,16 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -1874,11 +1961,27 @@ input[type="number"]::-webkit-outer-spin-button,
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .duration-200 {
   transition-duration: 200ms;
 }
 .duration-300 {
   transition-duration: 300ms;
+}
+.duration-100 {
+  transition-duration: 100ms;
+}
+.duration-75 {
+  transition-duration: 75ms;
 }
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -2035,6 +2138,10 @@ div[data-block-handle="ig_feed"] {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
 .hover\:fill-accent:hover {
   fill: #8baca5;
 }
@@ -2048,7 +2155,11 @@ div[data-block-handle="ig_feed"] {
 }
 .hover\:text-primary:hover {
   --tw-text-opacity: 1;
-  color: rgb(139 172 165 / var(--tw-text-opacity));
+  color: rgb(153 138 95 / var(--tw-text-opacity));
+}
+.hover\:text-indigo-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
 }
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -2171,8 +2282,17 @@ div[data-block-handle="ig_feed"] {
   .md\:bottom-1\/2 {
     bottom: 50%;
   }
+  .md\:left-full {
+    left: 100%;
+  }
+  .md\:top-0 {
+    top: 0px;
+  }
   .md\:col-span-1 {
     grid-column: span 1 / span 1;
+  }
+  .md\:col-span-6 {
+    grid-column: span 6 / span 6;
   }
   .md\:mx-2 {
     margin-left: 0.5rem;
@@ -2191,6 +2311,15 @@ div[data-block-handle="ig_feed"] {
   }
   .md\:mt-5 {
     margin-top: 1.25rem;
+  }
+  .md\:ml-2 {
+    margin-left: 0.5rem;
+  }
+  .md\:mr-2 {
+    margin-right: 0.5rem;
+  }
+  .md\:mt-0 {
+    margin-top: 0px;
   }
   .md\:block {
     display: block;
@@ -2290,6 +2419,9 @@ div[data-block-handle="ig_feed"] {
   .md\:p-12 {
     padding: 3rem;
   }
+  .md\:p-4 {
+    padding: 1rem;
+  }
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2318,6 +2450,9 @@ div[data-block-handle="ig_feed"] {
   .lg\:max-w-none {
     max-width: none;
   }
+  .lg\:max-w-7xl {
+    max-width: 80rem;
+  }
   .lg\:-translate-y-\[2\.5rem\] {
     --tw-translate-y: -2.5rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2339,11 +2474,11 @@ div[data-block-handle="ig_feed"] {
 }
 .peer:checked ~ .peer-checked\:\[\&_\.custom-checkbox\]\:border-primary .custom-checkbox {
   --tw-border-opacity: 1;
-  border-color: rgb(139 172 165 / var(--tw-border-opacity));
+  border-color: rgb(153 138 95 / var(--tw-border-opacity));
 }
 .peer:checked ~ .peer-checked\:\[\&_\.custom-checkbox\]\:bg-primary .custom-checkbox {
   --tw-bg-opacity: 1;
-  background-color: rgb(139 172 165 / var(--tw-bg-opacity));
+  background-color: rgb(153 138 95 / var(--tw-bg-opacity));
 }
 .\[\&_svg\]\:scale-0 svg {
   --tw-scale-x: 0;
