--- a/assets/app.css
+++ b/assets/app.css
@@ -826,6 +826,60 @@ input[type="number"]::-webkit-outer-spin-button,
 .top-\[58px\] {
   top: 58px;
 }
+.-left-full {
+  left: -100%;
+}
+.-left-10 {
+  left: -2.5rem;
+}
+.-left-1\.5 {
+  left: -0.375rem;
+}
+.bottom-1\/3 {
+  bottom: 33.333333%;
+}
+.-left-4 {
+  left: -1rem;
+}
+.bottom-1\/4 {
+  bottom: 25%;
+}
+.bottom-\[10\] {
+  bottom: 10;
+}
+.bottom-\[1\] {
+  bottom: 1;
+}
+.-bottom-\[10\] {
+  bottom: -10;
+}
+.bottom-\[-10\] {
+  bottom: -10;
+}
+.bottom-\[12\] {
+  bottom: 12;
+}
+.bottom-\[6\] {
+  bottom: 6;
+}
+.bottom-10 {
+  bottom: 2.5rem;
+}
+.bottom-11 {
+  bottom: 2.75rem;
+}
+.bottom-12 {
+  bottom: 3rem;
+}
+.-right-10 {
+  right: -2.5rem;
+}
+.-left-8 {
+  left: -2rem;
+}
+.-right-8 {
+  right: -2rem;
+}
 .z-10 {
   z-index: 10;
 }
@@ -974,6 +1028,12 @@ input[type="number"]::-webkit-outer-spin-button,
 .mt-8 {
   margin-top: 2rem;
 }
+.mt-\[10px\] {
+  margin-top: 10px;
+}
+.mt-\[20px\] {
+  margin-top: 20px;
+}
 .block {
   display: block;
 }
@@ -1114,6 +1174,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .w-screen {
   width: 100vw;
 }
+.w-5\/6 {
+  width: 83.333333%;
+}
 .min-w-\[250px\] {
   min-width: 250px;
 }
@@ -1187,6 +1250,10 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .translate-x-full {
   --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-translate-x-10 {
+  --tw-translate-x: -2.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-180 {
@@ -1350,6 +1417,15 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-divide-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
 }
+.place-self-end {
+  place-self: end;
+}
+.place-self-center {
+  place-self: center;
+}
+.self-start {
+  align-self: flex-start;
+}
 .self-end {
   align-self: flex-end;
 }
@@ -1505,6 +1581,10 @@ input[type="number"]::-webkit-outer-spin-button,
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
 }
+.bg-off-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 244 / var(--tw-bg-opacity));
+}
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
 }
@@ -1603,6 +1683,10 @@ input[type="number"]::-webkit-outer-spin-button,
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
+}
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 .pb-12 {
   padding-bottom: 3rem;
@@ -1823,6 +1907,10 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-off-white {
+  --tw-text-opacity: 1;
+  color: rgb(248 249 244 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
@@ -2037,6 +2125,10 @@ div[data-block-handle="ig_feed"] {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
+.hover\:bg-off-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 244 / var(--tw-bg-opacity));
+}
 .hover\:fill-accent:hover {
   fill: #8baca5;
 }
@@ -2150,6 +2242,10 @@ div[data-block-handle="ig_feed"] {
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+  .sm\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
   .sm\:text-left {
     text-align: left;
