--- a/sections/product-description.liquid
+++ b/sections/product-description.liquid
@@ -1,22 +1,16 @@
-<div class="container">
-  {% render 'product-gallery' %}
-  <div class="grid md:grid-cols-2 md:gap-10 grid-cols-1 gap-5">
+<div class="container my-10">
+    <div class="grid md:grid-cols-2 md:gap-10 grid-cols-1 gap-5 justify-center">
     {% comment %} Product Media {% endcomment %}
-    {% comment %} NEW {% endcomment %}
-    
-    
-    {% comment %} OLD {% endcomment %}
-    
-    {% comment %} <div>
+    <div class="w-5/6 place-self-center self-start">
       {% if product.media.size > 1 %}
-        {% render 'product-media-slider' %}
+        {% render 'product-gallery' , max-width: 100 %}
       {% else %}
         {% for media in product.media %}
           {% render 'product-media'
             , media: media %}
         {% endfor %}
       {% endif %}
-    </div> {% endcomment %}
+    </div>
     {% comment %} Product Description {% endcomment %}
     <div class="flex flex-col gap-4">
       {% for block in section.blocks %}
