--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -1,12 +1,12 @@
+{% assign width = width | default: 500 %}
+{% assign height = height | default: 600 %}
 {% case media.media_type %}
   {% when 'image' %}
-    {{ media | image_url: width: 600 | image_tag: loading: 'lazy', class: class, id: id }}
+    {{ media | image_url: width: width, height: height | image_tag: loading: 'lazy', class: class, id: id }}
   {% when 'video' %}
-    {{ media | video_tag: controls: true, class: class, id: id }}
+    {{ media | video_tag: controls: controls | default: false, class: class, id: id }}
   {% when 'external_video' %}
     {{ media | external_video_tag: class: 'aspect-video w-full', id: id }}
-  {% when 'model' %}
-    {{ media | model_viewer_tag: reveal: 'interaction', class: 'w-full md:min-h-[400px] min-h-[200px]', id: id }}
   {% else %}
     {{ media | media_tag }}
 {% endcase %}
