--- a/assets/app.css
+++ b/assets/app.css
@@ -2423,6 +2423,9 @@ div[data-block-handle="ig_feed"] {
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
   .lg\:gap-12 {
     gap: 3rem;
   }
