--- a/assets/app.css
+++ b/assets/app.css
@@ -194,6 +194,26 @@
     opacity: 0;
   }
 }
+.swiper-thumbs .swiper-slide {
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.swiper-thumbs .swiper-slide:hover {
+  border-width: 2px !important;
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(153 138 95 / var(--tw-border-opacity)) !important;
+}
+.swiper-slide-thumb-active {
+  border-width: 2px !important;
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(153 138 95 / var(--tw-border-opacity)) !important;
+}
 /* ! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com */
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -514,7 +534,7 @@ video {
   display: none;
 }
 :root {
-    font-family: "Jost", sans-serif;
+    font-family: 'Jost', sans-serif;
     font-weight: 300;
     letter-spacing: 0.1em;
     text-underline-offset: 2px;
@@ -522,9 +542,9 @@ video {
 body {
     scroll-behavior: smooth;
   }
-input[type="number"]::-webkit-outer-spin-button,
-  input[type="number"]::-webkit-inner-spin-button,
-  input[type="number"] {
+input[type='number']::-webkit-outer-spin-button,
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number'] {
     -webkit-appearance: none;
     margin: 0;
     -moz-appearance: textfield !important;
@@ -533,17 +553,13 @@ input[type="number"]::-webkit-outer-spin-button,
     /* $ SHADOW */
     --shadow-color: 0deg 0% 68%;
     --shadow-low: 0.3px 0.4px 0.6px hsl(var(--shadow-color) / 0.29),
-      0.4px 0.7px 0.9px -1.2px hsl(var(--shadow-color) / 0.29),
-      1px 1.6px 2.1px -2.5px hsl(var(--shadow-color) / 0.29);
+      0.4px 0.7px 0.9px -1.2px hsl(var(--shadow-color) / 0.29), 1px 1.6px 2.1px -2.5px hsl(var(--shadow-color) / 0.29);
     --shadow-medium: 0.3px 0.4px 0.6px hsl(var(--shadow-color) / 0.3),
-      0.8px 1.3px 1.7px -0.8px hsl(var(--shadow-color) / 0.3),
-      2px 3.3px 4.3px -1.7px hsl(var(--shadow-color) / 0.3),
+      0.8px 1.3px 1.7px -0.8px hsl(var(--shadow-color) / 0.3), 2px 3.3px 4.3px -1.7px hsl(var(--shadow-color) / 0.3),
       4.8px 8px 10.5px -2.5px hsl(var(--shadow-color) / 0.3);
     --shadow-high: 0.3px 0.4px 0.6px hsl(var(--shadow-color) / 0.28),
-      1.3px 2.2px 2.9px -0.4px hsl(var(--shadow-color) / 0.28),
-      2.4px 4px 5.2px -0.7px hsl(var(--shadow-color) / 0.28),
-      4px 6.6px 8.7px -1.1px hsl(var(--shadow-color) / 0.28),
-      6.3px 10.5px 13.8px -1.4px hsl(var(--shadow-color) / 0.28),
+      1.3px 2.2px 2.9px -0.4px hsl(var(--shadow-color) / 0.28), 2.4px 4px 5.2px -0.7px hsl(var(--shadow-color) / 0.28),
+      4px 6.6px 8.7px -1.1px hsl(var(--shadow-color) / 0.28), 6.3px 10.5px 13.8px -1.4px hsl(var(--shadow-color) / 0.28),
       9.9px 16.4px 21.6px -1.8px hsl(var(--shadow-color) / 0.28),
       15px 24.9px 32.7px -2.1px hsl(var(--shadow-color) / 0.28),
       22.1px 36.6px 48.1px -2.5px hsl(var(--shadow-color) / 0.28);
@@ -781,8 +797,14 @@ input[type="number"]::-webkit-outer-spin-button,
 .-left-1 {
   left: -0.25rem;
 }
+.-left-10 {
+  left: -2.5rem;
+}
 .-left-\[100vw\] {
   left: -100vw;
+}
+.-right-10 {
+  right: -2.5rem;
 }
 .bottom-0 {
   bottom: 0px;
@@ -825,60 +847,6 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .top-\[58px\] {
   top: 58px;
-}
-.-left-full {
-  left: -100%;
-}
-.-left-10 {
-  left: -2.5rem;
-}
-.-left-1\.5 {
-  left: -0.375rem;
-}
-.bottom-1\/3 {
-  bottom: 33.333333%;
-}
-.-left-4 {
-  left: -1rem;
-}
-.bottom-1\/4 {
-  bottom: 25%;
-}
-.bottom-\[10\] {
-  bottom: 10;
-}
-.bottom-\[1\] {
-  bottom: 1;
-}
-.-bottom-\[10\] {
-  bottom: -10;
-}
-.bottom-\[-10\] {
-  bottom: -10;
-}
-.bottom-\[12\] {
-  bottom: 12;
-}
-.bottom-\[6\] {
-  bottom: 6;
-}
-.bottom-10 {
-  bottom: 2.5rem;
-}
-.bottom-11 {
-  bottom: 2.75rem;
-}
-.bottom-12 {
-  bottom: 3rem;
-}
-.-right-10 {
-  right: -2.5rem;
-}
-.-left-8 {
-  left: -2rem;
-}
-.-right-8 {
-  right: -2rem;
 }
 .z-10 {
   z-index: 10;
@@ -1028,9 +996,6 @@ input[type="number"]::-webkit-outer-spin-button,
 .mt-8 {
   margin-top: 2rem;
 }
-.mt-\[10px\] {
-  margin-top: 10px;
-}
 .mt-\[20px\] {
   margin-top: 20px;
 }
@@ -1124,9 +1089,6 @@ input[type="number"]::-webkit-outer-spin-button,
 .max-h-\[70vh\] {
   max-height: 70vh;
 }
-.min-h-\[200px\] {
-  min-height: 200px;
-}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1151,6 +1113,9 @@ input[type="number"]::-webkit-outer-spin-button,
 .w-5 {
   width: 1.25rem;
 }
+.w-5\/6 {
+  width: 83.333333%;
+}
 .w-6 {
   width: 1.5rem;
 }
@@ -1173,9 +1138,6 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .w-screen {
   width: 100vw;
-}
-.w-5\/6 {
-  width: 83.333333%;
 }
 .min-w-\[250px\] {
   min-width: 250px;
@@ -1250,10 +1212,6 @@ input[type="number"]::-webkit-outer-spin-button,
 }
 .translate-x-full {
   --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.-translate-x-10 {
-  --tw-translate-x: -2.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-180 {
@@ -1417,9 +1375,6 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-divide-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
 }
-.place-self-end {
-  place-self: end;
-}
 .place-self-center {
   place-self: center;
 }
@@ -1581,10 +1536,6 @@ input[type="number"]::-webkit-outer-spin-button,
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
 }
-.bg-off-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 249 244 / var(--tw-bg-opacity));
-}
 .bg-opacity-80 {
   --tw-bg-opacity: 0.8;
 }
@@ -1683,10 +1634,6 @@ input[type="number"]::-webkit-outer-spin-button,
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
-}
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
 }
 .pb-12 {
   padding-bottom: 3rem;
@@ -1907,10 +1854,6 @@ input[type="number"]::-webkit-outer-spin-button,
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-off-white {
-  --tw-text-opacity: 1;
-  color: rgb(248 249 244 / var(--tw-text-opacity));
-}
 .underline {
   text-decoration-line: underline;
 }
@@ -2038,7 +1981,7 @@ input[type="number"]::-webkit-outer-spin-button,
   margin-bottom: 20px;
 }
 /* Instagram feed styles */
-div[data-block-handle="ig_feed"] {
+div[data-block-handle='ig_feed'] {
   width: 100% !important;
   margin-right: auto !important;
   margin-left: auto !important;
@@ -2046,27 +1989,27 @@ div[data-block-handle="ig_feed"] {
   padding-left: 20px !important;
 }
 @media (min-width: 640px) {
-  div[data-block-handle="ig_feed"] {
+  div[data-block-handle='ig_feed'] {
     max-width: 640px !important;
   }
 }
 @media (min-width: 768px) {
-  div[data-block-handle="ig_feed"] {
+  div[data-block-handle='ig_feed'] {
     max-width: 768px !important;
   }
 }
 @media (min-width: 1024px) {
-  div[data-block-handle="ig_feed"] {
+  div[data-block-handle='ig_feed'] {
     max-width: 1024px !important;
   }
 }
 @media (min-width: 1280px) {
-  div[data-block-handle="ig_feed"] {
+  div[data-block-handle='ig_feed'] {
     max-width: 1280px !important;
   }
 }
 @media (min-width: 1536px) {
-  div[data-block-handle="ig_feed"] {
+  div[data-block-handle='ig_feed'] {
     max-width: 1536px !important;
   }
 }
@@ -2124,10 +2067,6 @@ div[data-block-handle="ig_feed"] {
 .hover\:bg-red-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(127 29 29 / var(--tw-bg-opacity));
-}
-.hover\:bg-off-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 249 244 / var(--tw-bg-opacity));
 }
 .hover\:fill-accent:hover {
   fill: #8baca5;
@@ -2235,6 +2174,10 @@ div[data-block-handle="ig_feed"] {
   .sm\:border-r {
     border-right-width: 1px;
   }
+  .sm\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -2242,10 +2185,6 @@ div[data-block-handle="ig_feed"] {
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
-  }
-  .sm\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
   }
   .sm\:text-left {
     text-align: left;
@@ -2322,9 +2261,6 @@ div[data-block-handle="ig_feed"] {
   }
   .md\:h-\[300px\] {
     height: 300px;
-  }
-  .md\:min-h-\[400px\] {
-    min-height: 400px;
   }
   .md\:w-1\/2 {
     width: 50%;
@@ -2422,9 +2358,6 @@ div[data-block-handle="ig_feed"] {
   }
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .lg\:gap-12 {
     gap: 3rem;
